# practice

./: .gitmodules  README.md
01-git/check-alasheev/: .clang-format  CMakeLists.txt  README.md  main.cpp
01-git/check-alasheev/dependencies/: HashLibrary.cmake
01-git/check-alasheev/lib/: CMakeLists.txt  validate.cpp  validate.hpp
01-git/mkdir-andruschenko/: .gitignore  CMakeLists.txt  README.md  mkdir.c
01-git/mkdir-mukhin/: CMakeLists.txt  README.md  mkdir.cpp
01-git/put-osetrov/: CMakeLists.txt  README.md  main.cpp
01-git/put-osetrov/dependencies/: HashLibrary.cmake
01-git/put-osetrov/lib/: CMakeLists.txt  empty_dir.cpp  empty_dir.hpp  git_put.cpp  git_put.hpp  read_content.cpp  read_content.hpp  sha256.cpp  sha256.hpp
01-git/rm-artemenko/: CMakeLists.txt  main.cpp  tree.hpp
05-mixnets/Drastijk-router-python/: README.MTU.md  README.md  abstractions.py  acknowledgement_journal.py  journal_record.py  local_test_env.py  main.py  makefile  message_enumerator.py  models.py  pyproject.toml  router.py  setup.cfg  shell.py  socket_io.py  socket_test.py  test_env.py  utilities.py
05-mixnets/Drastijk-router-python/tests/: test_happy_hash.py
07-crdt/cpp/: .clang-format  CMakeLists.txt
07-crdt/cpp/libs/: CMakeLists.txt
07-crdt/cpp/libs/cmn/: CMakeLists.txt  id.cpp  id.hpp
07-crdt/cpp/libs/ll/: CMakeLists.txt  bytes.cpp  bytes.hpp  zipint.cpp  zipint.hpp
07-crdt/cpp/libs/tlv/: CMakeLists.txt  io.cpp  io.hpp  record.cpp  record.hpp
07-crdt/cpp/libs/utils/: CMakeLists.txt  bytes.cpp  bytes.hpp  zipint.cpp  zipint.hpp
07-crdt/cpp/lwwv-isfr-artemenko/: CMakeLists.txt
07-crdt/cpp/lwwv-isfr-artemenko/cmd/: CMakeLists.txt  main.cpp
07-crdt/cpp/lwwv-isfr-artemenko/demo/: CMakeLists.txt  main.cpp
07-crdt/cpp/lwwv-isfr-artemenko/isfr/: CMakeLists.txt  types.cpp  types.hpp
07-crdt/cpp/tests/: CMakeLists.txt  test_isfr.cpp  test_tlv.cpp  test_zip.cpp
09-fuzz/json_boloninid_shubnikov/fuzz/: Cargo.toml  my_fuzz.rs
09-fuzz/protobuf-golub-osetrov/: .gitignore  CMakeLists.txt  README.md  main.cpp  protobuf-golub-osetrov.cpp  protobuf-golub-osetrov.hpp  protobuf-golub-osetrov.proto  test.sh  utils.cpp  utils.hpp
09-fuzz/protobuf-golub-osetrov/fuzzing/: CMakeLists.txt  README.md  fuzz.cpp
09-fuzz/protobuf-zhukov-afanasyeva/: Cargo.toml  READme.md
09-fuzz/protobuf-zhukov-afanasyeva/fuzz/: Cargo.toml
09-fuzz/protobuf-zhukov-afanasyeva/fuzz/fuzz_targets/: fuzz_target_1.rs
09-fuzz/protobuf-zhukov-afanasyeva/src/: build.rs  lib.rs  main.rs
09-fuzz/xml-gamezardashvili-shtakin/fuzz/: Cargo.toml
09-fuzz/xml-gamezardashvili-shtakin/fuzz/fuzz_targets/: fuzz_bin.rs  fuzz_round_trip.rs  fuzz_xml.rs
0b-kernel/bason_redis_KatrinaVL_Quattro2372/: CMakeLists.txt  Makefile  REPORT.md
0b-kernel/bason_redis_KatrinaVL_Quattro2372/example/: client.cpp  server.cpp
0b-kernel/bason_redis_KatrinaVL_Quattro2372/src/codec/: bason_codec.hpp
0b-kernel/bason_redis_KatrinaVL_Quattro2372/src/redis/: bason_redis_client.cpp  bason_redis_client.hpp  bason_redis_server.cpp  bason_redis_server.hpp  bason_redis_store.cpp  bason_redis_store.hpp  persistence_manager.cpp  persistence_manager.hpp
0b-kernel/bason_redis_KatrinaVL_Quattro2372/src/wal/: wal.hpp
0b-kernel/bason_redis_KatrinaVL_Quattro2372/test/: test_client.cpp  test_persistence.cpp  test_server.cpp  test_store.cpp
0b-kernel/roegic,vladl2802,nicvod/: CMakeLists.txt  Makefile  git_interface.cpp  git_interface.h
0b-kernel/roegic,vladl2802,nicvod/git-grep-rs/: Cargo.toml
0b-kernel/roegic,vladl2802,nicvod/git-grep-rs/src/: main.rs
0b-kernel/roegic,vladl2802,nicvod/git-grep-rs/tests/: test.rs
0c-bason/TigodanAC-lavsasha-Gnihton/: .gitignore  CMakeLists.txt  README.md
0c-bason/TigodanAC-lavsasha-Gnihton/include/: bason_record.hpp  wal.hpp
0c-bason/TigodanAC-lavsasha-Gnihton/src/: bason_record.cpp  wal.cpp
0c-bason/TigodanAC-lavsasha-Gnihton/tests/: test_basic.cpp  test_corruption.cpp  test_crash.cpp  test_perf.cpp  test_rotate.cpp
0c-bason/assignment-1/cpp/: CMakeLists.txt  README.md
0c-bason/assignment-1/cpp/src/: bason_codec.cpp  bason_codec.h  flatten.cpp  flatten.h  json_converter.cpp  json_converter.h  path_utils.cpp  path_utils.h  ron64.cpp  ron64.h  strictness.cpp  strictness.h
0c-bason/assignment-1/cpp/test/: test_codec.cpp  test_flatten.cpp  test_fuzz.cpp  test_json.cpp  test_path.cpp  test_performance.cpp  test_ron64.cpp
0c-bason/assignment-1/cpp/tools/: basondump.cpp
0c-bason/assignment-1/rust/: Cargo.toml  README.md
0c-bason/assignment-1/rust/examples/: sample.rs
0c-bason/assignment-1/rust/src/: lib.rs  main.rs
0c-bason/assignment-1/rust/tests/: codec.rs  (+1 more)
0c-bason/assignment-7/: CMakeLists.txt  README.md
0c-bason/assignment-7/src/: btree.cpp  btree.hpp  mem_utils.hpp  page.hpp  page_manager.cpp  page_manager.hpp
0c-bason/assignment-7/test/: btree_test.cpp  page_manager_test.cpp
0c-bason/thenromanov/: .bazelrc  .clang-format  .clang-tidy  .gitignore  AUTHORS.md  BUILD.bazel  MODULE.bazel  README.md
0c-bason/thenromanov/codec/: BUILD.bazel  record.cpp  record.hpp
0c-bason/thenromanov/examples/: BUILD.bazel  example.cpp
0c-bason/thenromanov/level/: BUILD.bazel  compaction.cpp  compaction.hpp  constants.hpp  level.cpp  level.hpp  level_metrics.hpp  manifest.cpp  manifest.hpp  snapshot.cpp  snapshot.hpp  version.cpp  version.hpp  version_edit.cpp  version_edit.hpp
0c-bason/thenromanov/memtable/: BUILD.bazel  memtable.cpp  memtable.hpp  merge_iterator.cpp  merge_iterator.hpp  sorted_iterator.hpp
0c-bason/thenromanov/sst/: BUILD.bazel  constants.hpp  iterator.cpp  iterator.hpp  metadata.hpp  reader.cpp  reader.hpp  record.cpp  record.hpp  util.cpp  util.hpp  writer.cpp  writer.hpp
0c-bason/thenromanov/tools/: clang_tidy_wrapper.sh
0c-bason/thenromanov/util/: BUILD.bazel  util.cpp  util.hpp
0c-bason/thenromanov/wal/: BUILD.bazel  constants.hpp  iterator.cpp  iterator.hpp  reader.cpp  reader.hpp  record.cpp  record.hpp  util.cpp  util.hpp  writer.cpp  writer.hpp
rdx/con/con-pick/: CMakeLists.txt  README.md  con_pick.cpp  con_pick.h  main.cpp  test_con_pick.cpp
(+1925 files in other folders)
