[package]
name = "protobuf-zhukov-afanasyeva"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
protobuf-src = "1.1"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
