[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.json_boloninid_shubnikov]
path = ".."


[[bin]]
name = "my_fuzz"
path = "my_fuzz.rs"
test = false
doc = false
bench = false

