[package]
name = "bason-codec"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Assignment 1: BASON Codec"
license = "MIT"

[lib]
name = "bason_codec"
path = "src/lib.rs"

[[bin]]
name = "basondump"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1"
