load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "sorted_iterator",
    hdrs = ["sorted_iterator.hpp"],
    deps = ["//codec:record"],
)

cc_library(
    name = "merge_iterator",
    hdrs = ["merge_iterator.hpp"],
    srcs = ["merge_iterator.cpp"],
    deps = [
        ":sorted_iterator",
        "//codec:record",
        "//util:util",
    ],
)

cc_library(
    name = "memtable",
    hdrs = ["memtable.hpp"],
    srcs = ["memtable.cpp"],
    deps = [
        ":sorted_iterator",
        ":merge_iterator",
        "//codec:record",
        "@googletest//:gtest",
    ],
)
