load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "record_test",
    size = "small",
    srcs = ["record_test.cpp"],
    deps = [
        "//codec:record",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

test_suite(
    name = "small_tests",
    tags = ["small"],
    tests = [
        ":record_test",
    ],
)
